b=417836, canvas throws when accessing img with data URL; r=bz